--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <h1>Used Car Trading Company</h1>
+    <h1>Used Cars Trading Company</h1>
 </header>
 
 <main>
@@ -19,7 +19,7 @@
 </main>
 
 <footer>
-    <p>&copy; 2023 Used Car Trading Company</p>
+    <p>&copy; 2023 Used Cars Trading Company</p>
 </footer>
 
 </body>
