--- a/templates/manage_vehicles.html
+++ b/templates/manage_vehicles.html
@@ -11,11 +11,11 @@
         </tr>
     </thead>
     <tbody>
-        {% for vehicle in vehicles %}
+        {% for vehicle in related_vehicles %}
         <tr>
             <td>{{ vehicle.Vehicle_ID }}</td>
-            <td>{{ vehicle.Make }}</td>
-            <td>{{ vehicle.Model }}</td>
+            <td>{{ vehicle.make.name }}</td>
+            <td>{{ vehicle.model.name }}</td>
             <td><a href="{{ url_for('edit_vehicle', vehicle_id=vehicle.Vehicle_ID) }}">Edit</a></td>
         </tr>
         {% endfor %}
