--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -1,57 +1,74 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Edit Vehicle - ID: {{ vehicle.Vehicle_ID }}</h2>
+<div class="container mt-4">
+    <h2>Edit Vehicle - ID: {{ vehicle.Vehicle_ID }}</h2>
 
-<form action="{{ url_for('edit_vehicle', vehicle_id=vehicle.Vehicle_ID) }}" method="post">
-     <div class="form-group">
-        <label for="vin">VIN:</label>
-        <input type="text" class="form-control" id="vin" name="vin" value="{{ vehicle.VIN }}" required>
-    </div>
-    <div class="form-group">
-        <label for="registration_number">Registration Number:</label>
-        <input type="text" class="form-control" id="registration_number" name="registration_number" value="{{ vehicle.Registration_Number }}" required>
-    </div>
-    <div class="form-group">
-        <label for="make">Make:</label>
-        <input type="text" class="form-control" id="make" name="make" value="{{ vehicle.Make }}" required>
-    </div>
-    <div class="form-group">
-        <label for="model">Model:</label>
-        <input type="text" class="form-control" id="model" name="model" value="{{ vehicle.Model }}" required>
-    </div>
-    <div class="form-group">
-        <label for="first_registration_date">First Registration Date:</label>
-        <input type="text" class="form-control" id="first_registration_date" name="first_registration_date" value="{{ vehicle.First_Registration_Date }}" required>
-    </div>
-    <div class="form-group">
-        <label for="fuel_type">Fuel Type:</label>
-        <input type="text" class="form-control" id="fuel_type" name="fuel_type" value="{{ vehicle.Fuel_Type }}" required>
-    </div>
-    <div class="form-group">
-        <label for="engine_capacity">Engine Capacity:</label>
-        <input type="text" class="form-control" id="engine_capacity" name="engine_capacity" value="{{ vehicle.Engine_Capacity }}" required>
-    </div>
-    <div class="form-group">
-        <label for="engine_power">Engine Power:</label>
-        <input type="text" class="form-control" id="engine_power" name="engine_power" value="{{ vehicle.Engine_Power }}" required>
-    </div>
-    <div class="form-group">
-        <label for="gearbox_type">Gearbox Type:</label>
-        <input type="text" class="form-control" id="gearbox_type" name="gearbox_type" value="{{ vehicle.Gearbox_Type }}" required>
-    </div>
-    <div class="form-group">
-        <label for="mileage">Mileage:</label>
-        <input type="text" class="form-control" id="mileage" name="mileage" value="{{ vehicle.Mileage }}" required>
-    </div>
-    <div class="form-group">
-        <label for="number_of_doors">Number Of Doors:</label>
-        <input type="text" class="form-control" id="number_of_doors" name="number_of_doors" value="{{ vehicle.Number_Of_Doors }}" required>
-    </div>
-    <div class="form-group">
-        <label for="drive_type">Drive Type:</label>
-        <input type="text" class="form-control" id="drive_type" name="drive_type" value="{{ vehicle.Drive_Type }}" required>
-    </div>
-    <button type="submit" class="btn btn-primary">Save Changes</button>
-</form>
+    <form action="{{ url_for('edit_vehicle', vehicle_id=vehicle.Vehicle_ID) }}" method="post">
+        <!-- VIN -->
+        <div class="form-group">
+            <label for="vin">VIN:</label>
+            <input type="text" class="form-control" id="vin" name="vin" value="{{ form.VIN.data }}" maxlength="17"
+                   pattern="[A-Z0-9]{17}" title="VIN must only contain uppercase letters and numbers" required>
+        </div>
+
+        <!-- Registration Number -->
+        <div class="form-group">
+            <label for="registration_number">Registration Number:</label>
+            <input type="text" class="form-control" id="registration_number" name="registration_number"
+                   value="{{ vehicle.Registration_Number }}" required>
+        </div>
+
+        <!-- First Registration Date -->
+        <div class="form-group">
+            <label for="first_registration_date">First Registration Date:</label>
+            <input type="text" class="form-control" id="first_registration_date" name="first_registration_date" value="{{ vehicle.First_Registration_Date }}" required>
+        </div>
+
+        <!-- Fuel Type -->
+        <div class="form-group">
+            <label for="fuel_type">Fuel Type:</label>
+            <input type="text" class="form-control" id="fuel_type" name="fuel_type" value="{{ vehicle.Fuel_Type }}" required>
+        </div>
+
+        <!-- Engine Capacity -->
+        <div class="form-group">
+            <label for="engine_capacity">Engine Capacity:</label>
+            <input type="text" class="form-control" id="engine_capacity" name="engine_capacity" value="{{ vehicle.Engine_Capacity }}" required>
+        </div>
+
+        <!-- Engine Power -->
+        <div class="form-group">
+            <label for="engine_power">Engine Power:</label>
+            <input type="text" class="form-control" id="engine_power" name="engine_power" value="{{ vehicle.Engine_Power }}" required>
+        </div>
+
+        <!-- Gearbox Type -->
+        <div class="form-group">
+            <label for="gearbox_type">Gearbox Type:</label>
+            <input type="text" class="form-control" id="gearbox_type" name="gearbox_type" value="{{ vehicle.Gearbox_Type }}" required>
+        </div>
+
+        <!-- Mileage -->
+        <div class="form-group">
+            <label for="mileage">Mileage:</label>
+            <input type="text" class="form-control" id="mileage" name="mileage" value="{{ vehicle.Mileage }}" required>
+        </div>
+
+        <!-- Number Of Doors -->
+        <div class="form-group">
+            <label for="number_of_doors">Number Of Doors:</label>
+            <input type="text" class="form-control" id="number_of_doors" name="number_of_doors" value="{{ vehicle.Number_Of_Doors }}" required>
+        </div>
+
+        <!-- Drive Type -->
+        <div class="form-group">
+            <label for="drive_type">Drive Type:</label>
+            <input type="text" class="form-control" id="drive_type" name="drive_type" value="{{ vehicle.Drive_Type }}" required>
+        </div>
+
+        <!-- Save Changes Button -->
+        <button type="submit" class="btn btn-primary">Save Changes</button>
+    </form>
+</div>
 {% endblock %}
