--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,8 @@
 <body>
 
 <header>
-    <h1>Used Cars Trading Company</h1>
+     <h1><a href="/" class="text-decoration-none">Used Cars Trading Company</a></h1>
+</header>
 </header>
 
 <main>
